[package]
name = "vec-dir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = "0.3.3"
candle-examples = "0.3.2"
candle-nn = "0.3.3"
candle-transformers = "0.3.3"
clap = "4.4.18"
hf-hub = "0.3.2"
serde_json = "1.0.113"
tokenizers = "0.15.1"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
